# caepy_plus_back_end

./: .env.example  .gitignore  API_DOCUMENTATION.md  Dockerfile  PRODUCTION_CHECKLIST.md  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup_test_user.py  test_all_endpoints.sh  verify_skip_fields.py
alembic/: env.py
alembic/versions/: 000_initial_doctors_table.py  001_add_comprehensive_doctor_fields.py  001_initial_schema.py  002_comprehensive_doctor_schema.py  003_unique_email_and_phone.py  004_phone_to_varchar.py  005_add_hospitals_table.py  006_remove_field_name_from_doctor_media.py  007_add_consultation_fee_to_doctor_details.py  008_add_field_name_to_doctor_media.py  009_add_dropdown_options_table.py  010_add_testimonials_table.py  011_add_voice_onboarding_fields.py  012_add_questionnaire_fields_to_doctors.py  013_enhance_dropdown_options.py  014_add_role_to_doctors.py  015_make_required_fields_nullable.py  016_add_users_table.py  017_add_missing_doctor_details_columns.py
config/: email_templates.yaml  prompts.yaml
docs/: API_REFERENCE.md  alembic_setup.md  database_schema.md
scripts/: migrate.py  seed_dropdown_values.py
src/app/: __init__.py  main.py
src/app/api/: __init__.py
src/app/api/v1/: __init__.py
src/app/api/v1/endpoints/: __init__.py  admin_dropdown.py  admin_dropdowns.py  admin_users.py  auth.py  blobs.py  doctors.py  dropdown_data.py  dropdowns.py  health.py  hospitals.py  onboarding.py  onboarding_admin.py  otp.py  testimonials.py  voice.py  voice_config.py
src/app/core/: __init__.py  config.py  doctor_utils.py  exceptions.py  firebase_config.py  prompts.py  rbac.py  responses.py  security.py
src/app/db/: __init__.py  session.py
src/app/models/: __init__.py  doctor.py  dropdown_option.py  enums.py  hospital.py  onboarding.py  testimonial.py  user.py  voice_config.py
src/app/repositories/: __init__.py  doctor_repository.py  dropdown_option_repository.py  dropdown_repository.py  hospital_repository.py  onboarding_repository.py  testimonial_repository.py  user_repository.py  voice_config_repository.py
src/app/schemas/: __init__.py  auth.py  doctor.py  dropdown.py  dropdown_option.py  hospital.py  onboarding.py  testimonial.py  user.py  voice.py
src/app/services/: __init__.py  blob_storage_service.py  dropdown_option_service.py  email_service.py  extraction_service.py  gemini_service.py  linqmd_sync_service.py  otp_service.py  prompt_session_service.py  voice_service.py
src/app/static/: doctor_bulk_upload_template.csv
tests/: __init__.py  conftest.py  test_doctors.py  test_health.py
tests/api/: test_admin_dropdown.py  test_admin_users.py  test_auth.py  test_blobs.py  test_dropdown_data.py  test_hospitals.py  test_onboarding.py  test_onboarding_admin.py  test_otp.py  test_testimonials.py  test_voice.py  test_voice_config.py
tests/core/: test_auth_schemas.py  test_exceptions.py  test_rbac.py  test_security.py  test_user_repository.py
tests/integration/: test_doctor_repository.py  test_onboarding_repository.py  test_otp_endpoints.py  test_user_repository.py
tests/services/: test_extraction_service.py  test_linqmd_sync_service.py  test_otp_service.py  test_prompt_session_service.py
tests/unit/: test_auth_schemas.py  test_doctor_utils.py  test_jwt_helpers.py
