[project]
name = "doctor-onboarding-service"
version = "2.0.0"
description = "Production-grade headless backend microservice for doctor onboarding with AI-powered resume parsing and voice registration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["fastapi", "healthcare", "onboarding", "ai", "gemini", "microservice"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Typing :: Typed",
]

dependencies = [
    # Core Framework
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.36,<3.0.0",
    "aiosqlite>=0.20.0,<1.0.0",       # Async SQLite for development
    "asyncpg>=0.30.0,<1.0.0",          # PostgreSQL async driver for production
    "alembic>=1.14.0,<2.0.0",          # Database migrations
    
    # AI Integration (using new google-genai package)
    "google-genai>=1.0.0",             # New Gemini SDK (replaces deprecated google-generativeai)
    "tenacity>=8.2.3,<10.0.0",         # Retry logic (compatible with google-genai)
    
    # Utilities
    "python-multipart>=0.0.17,<1.0.0", # File uploads
    "python-jose[cryptography]>=3.3.0,<4.0.0",  # JWT tokens
    "passlib[bcrypt]>=1.7.4,<2.0.0",   # Password hashing
    "httpx>=0.28.0,<1.0.0",            # Async HTTP client
    "structlog>=24.4.0,<25.0.0",       # Structured logging
    "orjson>=3.10.0,<4.0.0",           # Fast JSON serialization
    "pyyaml>=6.0.0,<7.0.0",            # YAML parsing for prompts
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "httpx>=0.28.0,<1.0.0",
    "ruff>=0.8.0,<1.0.0",
    "mypy>=1.13.0,<2.0.0",
    "pre-commit>=4.0.0,<5.0.0",
    "faker>=33.0.0,<34.0.0",
]

test = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "httpx>=0.28.0,<1.0.0",
    "faker>=33.0.0,<34.0.0",
]

# Note: Use 'uvicorn src.app.main:app' directly instead of script entry points
# Script entry points require callable functions, not command strings

[project.urls]
Homepage = "https://github.com/yourusername/doctor-onboarding-service"
Documentation = "https://github.com/yourusername/doctor-onboarding-service#readme"
Repository = "https://github.com/yourusername/doctor-onboarding-service"
Issues = "https://github.com/yourusername/doctor-onboarding-service/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
target-version = "py312"
line-length = 100
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise from err
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG"]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "google.generativeai.*",
    "tenacity.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
